feat : 차단관리 > 차단해제 기능 구현

--- a/app/src/main/res/layout/fragment_manage_block.xml
+++ b/app/src/main/res/layout/fragment_manage_block.xml
@@ -32,12 +32,13 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
+        android:id="@+id/layoutNoBlockUser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="150dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <ImageView
