feat: 반려견 관리 recyclerView 수정

--- a/app/src/main/res/layout/row_pet.xml
+++ b/app/src/main/res/layout/row_pet.xml
@@ -19,12 +19,24 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewPetName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewPetName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/male_20px" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textViewPetInfo"
